Sync all content

--- a/content/pages/2015-2016.md
+++ b/content/pages/2015-2016.md
@@ -5,14 +5,14 @@ draft: false
 title: "2015\u20132016"
 uid: 8cf9d0f0-f85d-451c-82a9-144fd01e2a02
 ---
-- {{% resource_link "5cb8e2e8-3ce3-40c9-88d4-14761845544a" "Linear Network Theory and Sloppy Models" %}} *Mark Goldman, UC Davis (November 21, 2016)*           
-- {{% resource_link "40ce4ab4-08a2-4d78-b482-1d203558bb04" "Functional Connectivity Analysis Methods and Their Interpretational Pitfalls" %}} *Andre M. Bastos, MIT (September 13, 2016)*
-- {{% resource_link "d54c54b3-bd6d-4529-b651-37ddc0e913dc" "Tensor Methods" %}} *Anima Anandkumar, UC Irvine (July 21, 2016)* 
-- {{% resource_link "2d37ef1c-3907-41cd-81ce-61bf8ecfa820" "Dynamical Systems in Neuroscience" %}} *Seth Egger, MIT (January 22, 2016)* 
-- {{% resource_link "5ec35059-a7a4-4e57-b11a-12b8f833fbd7" "Dimensionality Reduction II" %}} *Sam Norman-Haignere, MIT (January 21, 2016)* 
-- {{% resource_link "2579d630-eff9-4e7d-bd83-569824b39c1d" "Dimensionality Reduction I" %}} *Emily Mackevicius and Greg Ciccarelli, MIT (January 19, 2016)*
+- [Linear Network Theory and Sloppy Models](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/14-linear-network-theory-and-sloppy-models/) *Mark Goldman, UC Davis (November 21, 2016)*           
+- [Functional Connectivity Analysis Methods and Their Interpretational Pitfalls](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/15-functional-connectivity-analysis-methods-and-their-interpretational-pitfalls/) *Andre M. Bastos, MIT (September 13, 2016)*
+- [Tensor Methods](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/10-tensor-methods/) *Anima Anandkumar, UC Irvine (July 21, 2016)* 
+- [Dynamical Systems in Neuroscience](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/12-dynamical-systems-in-neuroscience/) *Seth Egger, MIT (January 22, 2016)* 
+- [Dimensionality Reduction II](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/7-dimensionality-reduction-ii/) *Sam Norman-Haignere, MIT (January 21, 2016)* 
+- [Dimensionality Reduction I](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/6-dimensionality-reduction-i/) *Emily Mackevicius and Greg Ciccarelli, MIT (January 19, 2016)*
 - {{% resource_link "313dd04c-f019-416b-be57-3396acc25a04" "Cluster Computing and OpenMind" %}} (1 & 2) *Evan Remington and Satrajit Ghosh, MIT (January 12, 2016)*
-- {{% resource_link "4ce94ba3-2094-4dc7-aef7-e25656e0cb3c" "Decoding Analyses to Understand Neural Content and Coding" %}} *Ethan Meyers, Hampshire College & MIT (July 23, 2015)* 
-- {{% resource_link "b675ba4a-3c44-4809-9666-d0613ab5698a" "Learning in Deep Neural Networks" %}} *Phillip Isola, MIT (June 17, 2015)* 
-- {{% resource_link "43c7119b-0da8-422c-8120-3d505a6224ba" "Learning in Recurrent Neural Networks" %}} *Larry Abbott, Columbia (June 10, 2015)*
-- {{% resource_link "35248451-26ae-4683-a867-037d21195247" "Bayesian Methods: Brain and Cognitive Perspectives" %}} *Mehrdad Jazayeri and Josh Tenenbaum, MIT (June 9, 2015)*
+- [Decoding Analyses to Understand Neural Content and Coding](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/11-decoding-analyses-to-understand-neural-content-and-coding/) *Ethan Meyers, Hampshire College & MIT (July 23, 2015)* 
+- [Learning in Deep Neural Networks](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/4-learning-in-deep-neural-networks/) *Phillip Isola, MIT (June 17, 2015)* 
+- [Learning in Recurrent Neural Networks](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/5-learning-in-recurrent-neural-networks/) *Larry Abbott, Columbia (June 10, 2015)*
+- [Bayesian Methods: Brain and Cognitive Perspectives](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/1-bayesian-methods-brain-cognitive-perspectives/) *Mehrdad Jazayeri and Josh Tenenbaum, MIT (June 9, 2015)*
