--- a/content/pages/2017-2019.md
+++ b/content/pages/2017-2019.md
@@ -5,13 +5,13 @@ draft: false
 title: "2017\u20132019"
 uid: ea4f0868-8d17-47f4-a0f2-620d00f99c96
 ---
-- {{% resource_link "18ff3dd7-4988-4424-9842-1a8e4a1f1afd" "Principles and Applications of Relational Inductive Biases in Deep Learning" %}} *Kelsey Allen, MIT (April 11, 2019)*
+- [Principles and Applications of Relational Inductive Biases in Deep Learning](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/principles-and-applications-of-relational-inductive-biases-in-deep-learning/) *Kelsey Allen, MIT (April 11, 2019)*
 - {{% resource_link "1665b5d2-1535-4c27-adf1-374443c1c266" "Neural Decoding of Spike Trains and Local Field Potentials with Machine Learning in Python" %}} *Omar Costilla Reyes, MIT (April 2, 2019)*
-- {{% resource_link "dd75e946-7f49-443a-a1b8-6417cb33c71b" "Bayesian Inference in Generative Models" %}} *Luke Hewitt, MIT (November 13, 2018)*           
-- {{% resource_link "91841b2e-1048-4e5c-8534-309855d73d3d" "Unsupervised Discovery of Temporal Sequences in High-Dimensional Datasets" %}} *Emily Mackevicius and Andrew Bahle, MIT (April 19, 2018)*
-- {{% resource_link "d27fa909-0796-4d9e-8470-f6d41257e2b4" "Dimensionality Reduction for Matrix- and Tensor-Coded Data (1 & 2)" %}} *Alex Williams, Stanford (September 5, 2017)*
-- {{% resource_link "cc45452c-3645-45f4-897e-f26d27745efc" "Calcium Imaging Data Cell Extraction" %}} *Pengcheng Zhou, Columbia (July 12, 2017)*
-- {{% resource_link "9de6a05d-4099-48c9-b0f3-1c8fc5ab890c" "Reinforcement Learning" %}} *Sam Gershman, Harvard (June 16, 2017)*
-- {{% resource_link "10014ee3-4f0a-4640-81b3-b5f6da927bae" "Better Science Code" %}} *Eric Denovellis, BU (May 10, 2017)* 
-- {{% resource_link "e893940c-03f9-4668-8f45-7d5226d449d5" "An Introduction to LSTMs in TensorFlow" %}} *Harini Suresh and Nick Locascio, MIT (April 26, 2017)* 
-- {{% resource_link "6daf4ba4-fa27-43da-94e7-55b76e381cae" "An Introduction to Spike Sorting" %}} *Jai Bhagat and Caroline Moore-Kochlacs, MIT (March 22, 2017)*
+- [Bayesian Inference in Generative Models](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/2-bayesian-inference-in-generative-models/) *Luke Hewitt, MIT (November 13, 2018)*           
+- [Unsupervised Discovery of Temporal Sequences in High-Dimensional Datasets](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/13-unsupervised-discovery-of-temporal-sequences-in-high-dimensional-datasets/) *Emily Mackevicius and Andrew Bahle, MIT (April 19, 2018)*
+- [Dimensionality Reduction for Matrix- and Tensor-Coded Data (1 & 2)](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/8-dimensionality-reduction-for-matrix-and-tensor-coded-data-1-2/) *Alex Williams, Stanford (September 5, 2017)*
+- [Calcium Imaging Data Cell Extraction](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/17-calcium-imaging-data-cell-extraction/) *Pengcheng Zhou, Columbia (July 12, 2017)*
+- [Reinforcement Learning](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/3-reinforcement-learning/) *Sam Gershman, Harvard (June 16, 2017)*
+- [Better Science Code](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/18-better-science-code/) *Eric Denovellis, BU (May 10, 2017)* 
+- [An Introduction to LSTMs in TensorFlow](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/9-an-introduction-to-lstms-in-tensorflow/) *Harini Suresh and Nick Locascio, MIT (April 26, 2017)* 
+- [An Introduction to Spike Sorting](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/16-an-introduction-to-spike-sorting/) *Jai Bhagat and Caroline Moore-Kochlacs, MIT (March 22, 2017)*
