--- a/content/pages/2020-2021.md
+++ b/content/pages/2020-2021.md
@@ -5,12 +5,12 @@ draft: false
 title: "2020\u20132021"
 uid: a23e5ffa-3c51-4945-9777-4d78b1beaf2d
 ---
-- {{% resource_link "2b6384ec-0f39-434c-b834-e63f77896e70" "Recurrent Neural Networks for Cognitive Neuroscience" %}} *Guangyu Robert Yang, CBMM (August 30, 2021)*
-- {{% resource_link "d1cce1f6-3830-47ad-9f5e-04c79d63cab3" "Suite2P: A Fast and Accurate Pipeline for Automatically Processing Functional Imaging Recordings" %}} *Carsen Stringer, HHMI Janelia Research Campus (July 29, 2021)*
-- {{% resource_link "00575f9c-d710-4db0-b02d-cbaef1028dc6" "Learning What We Know and Knowing What We Learn: Gaussian Process Priors for Neural Data Analysis" %}} *Guillaume Hennequin and Kris Jensen, University of Cambridge (July 8, 2021)*
-- {{% resource_link "a4f0ff44-3133-49a0-b6e6-c2de29b49f04" "Exiting Flatland: Measuring, Modeling, and Synthesizing Animal Behavior in 3D" %}} *Jesse Marshall, Harvard University (April 8, 2021)*
-- {{% resource_link "dd978561-c3ed-4482-bf45-93336c5e34e8" "Linear Analysis of RNN Dynamics" %}} *Eli Pollock, MIT (November 19, 2020)*
-- {{% resource_link "11d23ec4-f07d-4579-b7ff-0c36f944a2ea" "Nonlinear Dimensionality Reduction" %}} *Christian Bueno, University of California, Santa Barbara (September 22, 2020)*
-- {{% resource_link "0c747ff3-3315-45ef-bc85-d0ccb9b6906e" "Using Lookit to Run Developmental Studies Online" %}} *Maddie Pelz, MIT (September 3, 2020)*
-- {{% resource_link "141f137f-ac22-41f5-856e-036c411d9482" "Adversarial Examples and Human-ML Alignment" %}} *Shibani Santurkar, MIT (July 23, 2020)*
-- {{% resource_link "312d9e2a-96ca-479b-a924-7f3be57611c9" "Decoding Animal Behavior Through Pose Tracking" %}} *Talmo Pereira, Princeton University (July 9, 2020)*
+- [Recurrent Neural Networks for Cognitive Neuroscience](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/recurrent-neural-networks-for-cognitive-neuroscience/) *Guangyu Robert Yang, CBMM (August 30, 2021)*
+- [Suite2P: A Fast and Accurate Pipeline for Automatically Processing Functional Imaging Recordings](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/suite2p-a-fast-and-accurate-pipeline-for-automatically-processing-functional-imaging-recordings/) *Carsen Stringer, HHMI Janelia Research Campus (July 29, 2021)*
+- [Learning What We Know and Knowing What We Learn: Gaussian Process Priors for Neural Data Analysis](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/learning-what-we-know-and-knowing-what-we-learn-gaussian-process-priors-for-neural-data-analysis/) *Guillaume Hennequin and Kris Jensen, University of Cambridge (July 8, 2021)*
+- [Exiting Flatland: Measuring, Modeling, and Synthesizing Animal Behavior in 3D](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/exiting-flatland-measuring-modeling-and-synthesizing-animal-behavior-in-3d/) *Jesse Marshall, Harvard University (April 8, 2021)*
+- [Linear Analysis of RNN Dynamics](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/linear-analysis-of-rnn-dynamics/) *Eli Pollock, MIT (November 19, 2020)*
+- [Nonlinear Dimensionality Reduction](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/nonlinear-dimensionality-reduction/) *Christian Bueno, University of California, Santa Barbara (September 22, 2020)*
+- [Using Lookit to Run Developmental Studies Online](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/using-lookit-to-run-developmental-studies-online/) *Maddie Pelz, MIT (September 3, 2020)*
+- [Adversarial Examples and Human-ML Alignment](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/adversarial-examples-and-human-ml-alignment/) *Shibani Santurkar, MIT (July 23, 2020)*
+- [Decoding Animal Behavior Through Pose Tracking](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/decoding-animal-behavior-through-pose-tracking/) *Talmo Pereira, Princeton University (July 9, 2020)*
