Sync all content

--- a/content/pages/2017-2019.md
+++ b/content/pages/2017-2019.md
@@ -5,13 +5,13 @@ draft: false
 title: "2017\u20132019"
 uid: ea4f0868-8d17-47f4-a0f2-620d00f99c96
 ---
-- [Principles and Applications of Relational Inductive Biases in Deep Learning](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/principles-and-applications-of-relational-inductive-biases-in-deep-learning/) *Kelsey Allen, MIT (April 11, 2019)*
+- {{% resource_link "2283bcf7-0571-4929-87a8-6626a031f336" "Principles and Applications of Relational Inductive Biases in Deep Learning" %}} *Kelsey Allen, MIT (April 11, 2019)*
 - {{% resource_link "1665b5d2-1535-4c27-adf1-374443c1c266" "Neural Decoding of Spike Trains and Local Field Potentials with Machine Learning in Python" %}} *Omar Costilla Reyes, MIT (April 2, 2019)*
-- [Bayesian Inference in Generative Models](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/2-bayesian-inference-in-generative-models/) *Luke Hewitt, MIT (November 13, 2018)*           
-- [Unsupervised Discovery of Temporal Sequences in High-Dimensional Datasets](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/13-unsupervised-discovery-of-temporal-sequences-in-high-dimensional-datasets/) *Emily Mackevicius and Andrew Bahle, MIT (April 19, 2018)*
-- [Dimensionality Reduction for Matrix- and Tensor-Coded Data (1 & 2)](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/8-dimensionality-reduction-for-matrix-and-tensor-coded-data-1-2/) *Alex Williams, Stanford (September 5, 2017)*
-- [Calcium Imaging Data Cell Extraction](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/17-calcium-imaging-data-cell-extraction/) *Pengcheng Zhou, Columbia (July 12, 2017)*
-- [Reinforcement Learning](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/3-reinforcement-learning/) *Sam Gershman, Harvard (June 16, 2017)*
-- [Better Science Code](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/18-better-science-code/) *Eric Denovellis, BU (May 10, 2017)* 
-- [An Introduction to LSTMs in TensorFlow](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/9-an-introduction-to-lstms-in-tensorflow/) *Harini Suresh and Nick Locascio, MIT (April 26, 2017)* 
-- [An Introduction to Spike Sorting](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/16-an-introduction-to-spike-sorting/) *Jai Bhagat and Caroline Moore-Kochlacs, MIT (March 22, 2017)*
+- {{% resource_link "fd502fe3-7a90-4ef9-89ea-0859884eee9a" "Bayesian Inference in Generative Models" %}} *Luke Hewitt, MIT (November 13, 2018)*           
+- {{% resource_link "dc65f709-8d58-45c5-b3ea-8561a953f253" "Unsupervised Discovery of Temporal Sequences in High-Dimensional Datasets" %}} *Emily Mackevicius and Andrew Bahle, MIT (April 19, 2018)*
+- {{% resource_link "f64333d0-49ab-499e-bd4b-07bcd0fe3b6d" "Dimensionality Reduction for Matrix- and Tensor-Coded Data (1 & 2)" %}} *Alex Williams, Stanford (September 5, 2017)*
+- {{% resource_link "dd89e75c-3cce-4b5b-ab4a-275f9fa38df3" "Calcium Imaging Data Cell Extraction" %}} *Pengcheng Zhou, Columbia (July 12, 2017)*
+- {{% resource_link "35e52cd6-3429-477b-b3ac-14dd25ff8f1a" "Reinforcement Learning" %}} *Sam Gershman, Harvard (June 16, 2017)*
+- {{% resource_link "b78005ec-91e9-4a88-9d93-a28c2e700d1a" "Better Science Code" %}} *Eric Denovellis, BU (May 10, 2017)* 
+- {{% resource_link "d6bea200-0aba-42e3-820d-543ef8a37012" "An Introduction to LSTMs in TensorFlow" %}} *Harini Suresh and Nick Locascio, MIT (April 26, 2017)* 
+- {{% resource_link "23eb6439-2ca1-4a2a-874b-470e0c8e371f" "An Introduction to Spike Sorting" %}} *Jai Bhagat and Caroline Moore-Kochlacs, MIT (March 22, 2017)*
