--- a/content/pages/2022-2023.md
+++ b/content/pages/2022-2023.md
@@ -5,10 +5,10 @@ draft: false
 title: "2022\u20132023"
 uid: b53b689b-d324-41e0-a02e-c49dccf68655
 ---
-- [FindingFive: An Online, Non-Profit Platform for Behavioral Research](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/findingfive-an-online-non-profit-platform-for-behavioral-research/) *Ting Qian and Noah Nelson, FindingFive (April 28, 2023)*
-- [Diffusion and Score-Based Generative Models](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/diffusion-and-score-based-generative-models/) *Yang Song, Stanford University (December 12, 2022)*
-- [Cell-Type Specific Transcriptomics](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/cell-type-specific-transcriptomics/) *Sebastian Pineda, MIT (November 21, 2022)*
-- [Tutorial on Statistical Inference on Representational Geometries](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/tutorial-on-statistical-inference-on-representational-geometries/) *Heiko Schütt, NYU (October 25, 2022)*
-- [GLMsingle: A Toolbox for Improving Single-Trial fMRI Response Estimates](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/glmsingle-a-toolbox-for-improving-single-trial-fmri-response-estimates/) *Jacob Prince, MIT (April 28, 2022)*
-- [ThreeDWorld (TDW) Tutorial](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/threedworld-tdw-tutorial/) *Jeremy Schwartz and Seth Alter, MIT (April 1, 2022)*
-- [Continuous-Time Deconvolutional Regression: A Method for Studying Continuous Dynamics in Naturalistic Data](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/continuous-time-deconvolutional-regression-a-method-for-studying-continuous-dynamics-in-naturalistic-data/) *Cory Shain, MIT (February 28, 2022)*
+- {{% resource_link "8c7624b5-cbf3-4109-a04b-f5c75195390a" "FindingFive: An Online, Non-Profit Platform for Behavioral Research" %}} *Ting Qian and Noah Nelson, FindingFive (April 28, 2023)*
+- {{% resource_link "44c17a6f-194e-4c82-ba7c-cee72db4da36" "Diffusion and Score-Based Generative Models" %}} *Yang Song, Stanford University (December 12, 2022)*
+- {{% resource_link "e6a9c508-6f3e-4cfd-aaf9-e73d110f7eea" "Cell-Type Specific Transcriptomics" %}} *Sebastian Pineda, MIT (November 21, 2022)*
+- {{% resource_link "828a4b7c-4bf5-4e5e-bc7a-dad086f0e5e9" "Tutorial on Statistical Inference on Representational Geometries" %}} *Heiko Schütt, NYU (October 25, 2022)*
+- {{% resource_link "c24d153b-bbf6-43b6-a1ff-e0274ed40a22" "GLMsingle: A Toolbox for Improving Single-Trial fMRI Response Estimates" %}} *Jacob Prince, MIT (April 28, 2022)*
+- {{% resource_link "c5f5b46e-b3da-45cd-97bd-636bbc6fe24c" "ThreeDWorld (TDW) Tutorial" %}} *Jeremy Schwartz and Seth Alter, MIT (April 1, 2022)*
+- {{% resource_link "e7107ec2-9917-4438-af6f-d606525b3b9f" "Continuous-Time Deconvolutional Regression: A Method for Studying Continuous Dynamics in Naturalistic Data" %}} *Cory Shain, MIT (February 28, 2022)*
