--- a/content/pages/2015-2016.md
+++ b/content/pages/2015-2016.md
@@ -5,14 +5,14 @@ draft: false
 title: "2015\u20132016"
 uid: 8cf9d0f0-f85d-451c-82a9-144fd01e2a02
 ---
-- [Linear Network Theory and Sloppy Models](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/14-linear-network-theory-and-sloppy-models/) *Mark Goldman, UC Davis (November 21, 2016)*           
-- [Functional Connectivity Analysis Methods and Their Interpretational Pitfalls](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/15-functional-connectivity-analysis-methods-and-their-interpretational-pitfalls/) *Andre M. Bastos, MIT (September 13, 2016)*
-- [Tensor Methods](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/10-tensor-methods/) *Anima Anandkumar, UC Irvine (July 21, 2016)* 
-- [Dynamical Systems in Neuroscience](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/12-dynamical-systems-in-neuroscience/) *Seth Egger, MIT (January 22, 2016)* 
-- [Dimensionality Reduction II](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/7-dimensionality-reduction-ii/) *Sam Norman-Haignere, MIT (January 21, 2016)* 
-- [Dimensionality Reduction I](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/6-dimensionality-reduction-i/) *Emily Mackevicius and Greg Ciccarelli, MIT (January 19, 2016)*
+- {{% resource_link "33791e6c-5c87-424e-9bf0-e483611bc070" "Linear Network Theory and Sloppy Models" %}} *Mark Goldman, UC Davis (November 21, 2016)*           
+- {{% resource_link "e952fc1c-542e-4c56-8eda-1109a5c35430" "Functional Connectivity Analysis Methods and Their Interpretational Pitfalls" %}} *Andre M. Bastos, MIT (September 13, 2016)*
+- {{% resource_link "f7aa44c9-c75f-42fb-a587-a6b489074333" "Tensor Methods" %}} *Anima Anandkumar, UC Irvine (July 21, 2016)* 
+- {{% resource_link "ca491e12-13ae-45b4-882e-075fb3f53896" "Dynamical Systems in Neuroscience" %}} *Seth Egger, MIT (January 22, 2016)* 
+- {{% resource_link "92e83e01-3575-469b-937a-57710e7ff9b5" "Dimensionality Reduction II" %}} *Sam Norman-Haignere, MIT (January 21, 2016)* 
+- {{% resource_link "60140d81-3492-44e7-82c9-04037c7e9fcf" "Dimensionality Reduction I" %}} *Emily Mackevicius and Greg Ciccarelli, MIT (January 19, 2016)*
 - {{% resource_link "313dd04c-f019-416b-be57-3396acc25a04" "Cluster Computing and OpenMind" %}} (1 & 2) *Evan Remington and Satrajit Ghosh, MIT (January 12, 2016)*
-- [Decoding Analyses to Understand Neural Content and Coding](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/11-decoding-analyses-to-understand-neural-content-and-coding/) *Ethan Meyers, Hampshire College & MIT (July 23, 2015)* 
-- [Learning in Deep Neural Networks](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/4-learning-in-deep-neural-networks/) *Phillip Isola, MIT (June 17, 2015)* 
-- [Learning in Recurrent Neural Networks](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/5-learning-in-recurrent-neural-networks/) *Larry Abbott, Columbia (June 10, 2015)*
-- [Bayesian Methods: Brain and Cognitive Perspectives](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/1-bayesian-methods-brain-cognitive-perspectives/) *Mehrdad Jazayeri and Josh Tenenbaum, MIT (June 9, 2015)*
+- {{% resource_link "873d80af-f667-4d76-b47e-fded9b620d8c" "Decoding Analyses to Understand Neural Content and Coding" %}} *Ethan Meyers, Hampshire College & MIT (July 23, 2015)* 
+- {{% resource_link "1d19f878-e086-4f5a-a60e-f546bc9c5445" "Learning in Deep Neural Networks" %}} *Phillip Isola, MIT (June 17, 2015)* 
+- {{% resource_link "aca76fb8-6c7d-4720-a66d-24240129eefd" "Learning in Recurrent Neural Networks" %}} *Larry Abbott, Columbia (June 10, 2015)*
+- {{% resource_link "d1c54f3e-ffee-4a0b-9d0e-06a37e8f82f6" "Bayesian Methods: Brain and Cognitive Perspectives" %}} *Mehrdad Jazayeri and Josh Tenenbaum, MIT (June 9, 2015)*
