--- a/content/pages/2020-2021.md
+++ b/content/pages/2020-2021.md
@@ -5,12 +5,12 @@ draft: false
 title: "2020\u20132021"
 uid: a23e5ffa-3c51-4945-9777-4d78b1beaf2d
 ---
-- [Recurrent Neural Networks for Cognitive Neuroscience](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/recurrent-neural-networks-for-cognitive-neuroscience/) *Guangyu Robert Yang, CBMM (August 30, 2021)*
-- [Suite2P: A Fast and Accurate Pipeline for Automatically Processing Functional Imaging Recordings](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/suite2p-a-fast-and-accurate-pipeline-for-automatically-processing-functional-imaging-recordings/) *Carsen Stringer, HHMI Janelia Research Campus (July 29, 2021)*
-- [Learning What We Know and Knowing What We Learn: Gaussian Process Priors for Neural Data Analysis](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/learning-what-we-know-and-knowing-what-we-learn-gaussian-process-priors-for-neural-data-analysis/) *Guillaume Hennequin and Kris Jensen, University of Cambridge (July 8, 2021)*
-- [Exiting Flatland: Measuring, Modeling, and Synthesizing Animal Behavior in 3D](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/exiting-flatland-measuring-modeling-and-synthesizing-animal-behavior-in-3d/) *Jesse Marshall, Harvard University (April 8, 2021)*
-- [Linear Analysis of RNN Dynamics](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/linear-analysis-of-rnn-dynamics/) *Eli Pollock, MIT (November 19, 2020)*
-- [Nonlinear Dimensionality Reduction](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/nonlinear-dimensionality-reduction/) *Christian Bueno, University of California, Santa Barbara (September 22, 2020)*
-- [Using Lookit to Run Developmental Studies Online](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/using-lookit-to-run-developmental-studies-online/) *Maddie Pelz, MIT (September 3, 2020)*
-- [Adversarial Examples and Human-ML Alignment](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/adversarial-examples-and-human-ml-alignment/) *Shibani Santurkar, MIT (July 23, 2020)*
-- [Decoding Animal Behavior Through Pose Tracking](https://draft.ocw.mit.edu/courses/res-9-008-brain-and-cognitive-sciences-computational-tutorials/pages/decoding-animal-behavior-through-pose-tracking/) *Talmo Pereira, Princeton University (July 9, 2020)*
+- {{% resource_link "7abe5c26-b209-4216-9f1a-4c8283952dc9" "Recurrent Neural Networks for Cognitive Neuroscience" %}} *Guangyu Robert Yang, CBMM (August 30, 2021)*
+- {{% resource_link "88a1df11-987b-4fad-8830-b58a16b661ee" "Suite2P: A Fast and Accurate Pipeline for Automatically Processing Functional Imaging Recordings" %}} *Carsen Stringer, HHMI Janelia Research Campus (July 29, 2021)*
+- {{% resource_link "ab7bc5be-ad1a-4cbe-81d3-791bc09ec059" "Learning What We Know and Knowing What We Learn: Gaussian Process Priors for Neural Data Analysis" %}} *Guillaume Hennequin and Kris Jensen, University of Cambridge (July 8, 2021)*
+- {{% resource_link "2dbba877-6bd4-4d0e-9692-1ba165c5d1f8" "Exiting Flatland: Measuring, Modeling, and Synthesizing Animal Behavior in 3D" %}} *Jesse Marshall, Harvard University (April 8, 2021)*
+- {{% resource_link "651a7c9d-6489-40a0-bc82-ac6b11aea844" "Linear Analysis of RNN Dynamics" %}} *Eli Pollock, MIT (November 19, 2020)*
+- {{% resource_link "36778088-c251-42bf-b379-6e85bbc10def" "Nonlinear Dimensionality Reduction" %}} *Christian Bueno, University of California, Santa Barbara (September 22, 2020)*
+- {{% resource_link "e7341edb-3c05-4277-a323-87d32cecf5c8" "Using Lookit to Run Developmental Studies Online" %}} *Maddie Pelz, MIT (September 3, 2020)*
+- {{% resource_link "dc7c5b0e-7fa6-4ce8-878d-9c7465f8e3e7" "Adversarial Examples and Human-ML Alignment" %}} *Shibani Santurkar, MIT (July 23, 2020)*
+- {{% resource_link "848f2154-ce02-4ac2-a5f8-a1de50ca88d0" "Decoding Animal Behavior Through Pose Tracking" %}} *Talmo Pereira, Princeton University (July 9, 2020)*
